--- a/kanker.html
+++ b/kanker.html
@@ -144,10 +144,10 @@
 								<div class="single-main">
 									<!-- News Head -->
 									<div class="news-head">
-										<img src="img/stk1.jpg" alt="#">
+										<img src="img/kkr1.jpg" alt="#">
 									</div>
 									<!-- News Title -->
-									<h1 class="news-title"><a href="news-single.html">DISCHARGE PLANNING PASIEN DIABETES MILLITUS</a></h1>
+									<h1 class="news-title"><a href="news-single.html">DISCHARGE PLANNING PASIEN KANKER</a></h1>
 									<!-- Meta -->
 									<div class="meta">
 										<div class="meta-left">
@@ -202,7 +202,9 @@
 									</div>
 									<div class="blog-bottom">
 										<!-- Social Share -->
-										
+										<div class="get-quote">
+											<a href="pdkan.pdf" class="btn" download="Discharge Planning Kanker">Cetak</a>
+										</div>
 										<!-- Next Prev -->
 										<ul class="prev-next">
 											<li class="prev"><a href="index.html"><i class="fa fa-angle-double-left"></i></a></li>
@@ -210,6 +212,7 @@
 										</ul>
 										<!--/ End Next Prev -->
 									</div>
+								
 								</div>
 							</div>
 						</div>
