--- a/blog-single.html
+++ b/blog-single.html
@@ -206,7 +206,9 @@
 									</div>
 									<div class="blog-bottom">
 										<!-- Social Share -->
-										
+										<div class="get-quote">
+											<a href="pddia.pdf" class="btn" download="Discharge Planning Diabetes Millitus">Cetak</a>
+										</div>
 										<!-- Next Prev -->
 										<ul class="prev-next">
 											<li class="prev"><a href="stroke.html"><i class="fa fa-angle-double-left"></i></a></li>
