--- a/pop.html
+++ b/pop.html
@@ -192,7 +192,9 @@
 									</div>
 									<div class="blog-bottom">
 										<!-- Social Share -->
-										
+										<div class="get-quote">
+											<a href="pdpop.pdf" class="btn" download="Discharge Planning Post Operasi">Cetak</a>
+										</div>
 										<!-- Next Prev -->
 										<ul class="prev-next">
 											<li class="prev"><a href="blog-single.html"><i class="fa fa-angle-double-left"></i></a></li>
