--- a/hipertensi.html
+++ b/hipertensi.html
@@ -203,7 +203,9 @@
 									</div>
 									<div class="blog-bottom">
 										<!-- Social Share -->
-										
+										<div class="get-quote">
+											<a href="pdhip.pdf" class="btn" download="Discharge Planning Hipertensi">Cetak</a>
+										</div>
 										<!-- Next Prev -->
 										<ul class="prev-next">
 											<li class="prev"><a href="kanker.html"><i class="fa fa-angle-double-left"></i></a></li>
