--- a/stroke.html
+++ b/stroke.html
@@ -206,7 +206,9 @@
 									</div>
 									<div class="blog-bottom">
 										<!-- Social Share -->
-										
+										<div class="get-quote">
+											<a href="pdstr.pdf" class="btn" download="Discharge Planning Stroke">Cetak</a>
+										</div>
 										<!-- Next Prev -->
 										<ul class="prev-next">
 											<li class="prev"><a href="hipertensi.html"><i class="fa fa-angle-double-left"></i></a></li>
